alteração de local

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
         <ul>
             <li>
-                <a href="#">Inscrever-se no NLW</a>
+                <a href="mailto:diogoline15@gmai.com">Me envie um e-mail</a>
             </li>
             <li>
-                <a href="#">Baixar meu e-book</a>
+                <a href="#"></a>
             </li>
             <li>
                 <a href="#">Ver meu Portifólio</a>
