alteração de texto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="container">
         <div id="profile">
             <img src="./assets/avatar.png" alt="foto de Diogo Lima">
-            <p>@d10g0_l1m4</p>
+            <p>Diogo_Lima</p>
         </div>
 
         <div id="switch" onclick="toggleMode()">
@@ -33,11 +33,11 @@
                 <a href="#"></a>
             </li>
             <li>
-                <a href="#">Ver meu Portifólio</a>
+                <a href="#"></a>
             </li>
             <li>
-                <a href="https://rocketseat.com.br/explorer"
-                target="_blank">Conheça o Explorer</a>
+                <a href="#"
+                target="_blank"></a>
             </li>
 
         </ul>
